--- a/pages/about.html
+++ b/pages/about.html
@@ -1,28 +1,138 @@
 ---
-layout: page_title
-title: <i class="fa fa-user fa-lg"></i>
-titlename: 关于
+layout: page
+title: About
+description: "Hey, this is Ethan."
 ---
-<h3>关于博客</h3>
-<p style=font-size:18px><B>PainterLin.com</B>是我用github、jekyll、markdown搭建起来的博客。博客名字直译过来是：画家林。在我看来，画家和黑客是相似的：他们都是创造者，就好像作曲家，建筑师，以及作家一样，他们的目的是创造某种美好的事物。选域名时想到这个也许代表了我的某种愿望。博客内容不一定与技术相关，技术只是世界上的一个小目录。</p>
 
-<h3>关于作者</h3>
-<p style=font-size:18px>我们也许在很多地方扮演不同的角色去适应环境，但在这里，一切都由自己控制。转眼间即将进入自己学生生涯的倒数第二年，未来的日子里，希望在这里写下一些自己的思考和感悟。如果可以的话，创造一些美好的事物。话说回来，一个人天天折腾不就是为了一个温暖怀抱吗。</p>
+<!-- Language Selector -->
+<select onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
+    <option value="0" selected> 中文 Chinese </option>
+    <option value="1"> 英语 English </option>
+</select>
 
-<hr>
-<a href="{{ site.author.linkedin }}">
-  <i class="fa fa-linkedin fa-lg" style="color:#16a095;"></i>
-</a>
-<a href="{{ site.author.weibo }}" target="_blank">
-  <i class="fa fa-weibo fa-lg" style="color:#16a095;"></i>
-</a>
-<a href="{{ site.author.github }}" target="_blank">
-  <i class="fa fa-github fa-lg" style="color:#16a095;"></i>
-</a>
-<a href="/pages/atom.xml" target="_blank">
-  <i class="fa fa-rss fa-lg" style="color:#16a095;"></i>
-</a>
-<a href="mailto:{{ site.author.email }}">
-  <i class="fa fa-envelope-o fa-lg" style="color:#16a095;"></i>
-</a>
-<hr>
+<hr />
+<article class="page-content">
+    <!-- Chinese Version -->
+    <div class="zh">
+        <p>在校博士研究生一枚，就读于清华大学计算机系。</p>
+
+        <hr />
+
+        <h3 id="section-1">联系我</h3>
+
+        <ul>
+          <li>email：god13dog@163.com</li>
+          <li>QQ：174927789</li>
+          <li>Weibo：<a href="http://weibo.com/1752135657">Ethan</a></li>
+          <li>知乎：<a href="http://www.zhihu.com/people/EthanCao">Ethan</a></li>
+        </ul>
+
+        <hr />
+
+        <h3 id="section-2">关于本站</h3>
+
+        <p>这个博客主要用于记录一下前端路上的风景。</p>
+
+        <table>
+          <tbody>
+            <tr>
+              <td>2015.5.25</td>
+              <td>修复了底栏上跳的bug，调整了demo页面响应式变化的效果。</td>
+            </tr>
+            <tr>
+              <td>2015.4.24</td>
+              <td>目前我在学习百度前端技术学院的任务，学的过程中感觉自己之前搭建博客的代码写的太烂太乱了。学完之后一定会全部重构一下的。不再使用 BootStrap 了，自己写一些响应式的布局，自己模块化构建 js 代码，争取在7月之前完成。</td>
+            </tr>
+            
+          </tbody>
+        </table>
+
+        <p>通过搭建这个静态博客，学到最多的就是 Git 的语法了，现在对 Git 的操作越来越熟练了。</p>
+    </div>
+
+    <!-- English Version -->
+    <div class="en">
+
+    </div>
+
+    <hr />
+
+    <h4 id="section-3">友情链接</h4>
+
+    <p><a href="http://zhangwenli.com/blog">羡辙杂俎</a> | <a href="https://www.anotherhome.net">Anotherhome</a> | <a href="http://reverland.org/">Reverland</a> | <a href="http://lizhipower.github.io/">ZhiLi</a> | <a href="http://simmer-jun.github.io/">Simmer</a> | <a href="http://awthink.net/">awthink</a> | <a href="http://aralic.github.io/">Aralic</a> | <a href="http://www.chen9.info/">zchen9</a> | <a href="http://wuhuaji.me/">wuhuaji</a> | <a href="http://www.lishengcn.cn/">lisheng</a> | <a href="http://www.fkysly.com/">马天翼</a></p>
+
+    <hr />
+
+</article>
+
+<!-- Handle Language Change -->
+<script type="text/javascript">
+    // get nodes
+    var $zh = document.querySelector(".zh");
+    var $en = document.querySelector(".en");
+    var $select = document.querySelector("select");
+
+    // bind hashchange event
+    window.addEventListener('hashchange', _render);
+
+    // handle render
+    function _render(){
+        var _hash = window.location.hash;
+        // en
+        if(_hash == "#en"){
+            $select.selectedIndex = 1;
+            $en.style.display = "block";
+            $zh.style.display = "none";
+        // zh by default
+        }else{
+            // not trigger onChange, otherwise cause a loop call.
+            $select.selectedIndex = 0;
+            $zh.style.display = "block";
+            $en.style.display = "none";
+        }
+    }
+
+    // handle select change
+    function onLanChange(index){
+        if(index == 0){
+            window.location.hash = "#zh"
+        }else{
+            window.location.hash = "#en"
+        }
+    }
+
+    // init
+    _render();
+</script>
+
+
+{% if site.duoshuo_username %}
+      <!-- 多说评论框 start -->
+      <div class="comment">
+          <div class="ds-thread"
+              data-thread-key="{{page.id}}"
+              data-title="{{page.title}}"
+              data-url="{{site.url}}{{site.baseurl}}{{page.url}}" >
+          </div>
+      </div>
+      <!-- 多说评论框 end -->
+      {% endif %}
+
+{% if site.duoshuo_username %}
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+    var _user = '{{site.duoshuo_username}}';
+
+    // duoshuo comment query.
+    var duoshuoQuery = {short_name: _user };
+    (function() {
+        var ds = document.createElement('script');
+        ds.type = 'text/javascript';ds.async = true;
+        ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+        ds.charset = 'UTF-8';
+        (document.getElementsByTagName('head')[0]
+         || document.getElementsByTagName('body')[0]).appendChild(ds);
+    })();
+</script>
+<!-- 多说公共JS代码 end -->
+{% endif %}
