revise the capital letter error!

--- a/pages/work.html
+++ b/pages/work.html
@@ -9,7 +9,7 @@ permalink: /Work/
 	<ul>
 		<li>
 			<a href="http://newsminer.net/">
-				<img src="{{ "/public/img/newsminer.png" | prepend: site.baseurl }}">
+				<img src="{{ "/public/img/NewsMiner.png" | prepend: site.baseurl }}">
 			</a>
 			<div class="head">
 				<a href="http://newsminer.net/">
